--- a/data/components/AWS/CloudCheckr/component.yaml
+++ b/data/components/AWS/CloudCheckr/component.yaml
@@ -9,7 +9,7 @@ satisfies:
     AC-2:
       implementation_status: null
       narrative:
-        j: User accounts will be monitored monthly and accounts will be disabled after 90 days of inactivity; this will be a manual review process every 30 days. 18F is in the process of automating this account management process through the use of implementing AWS OSQuery to trigger alerts when user accounts are inactive of a 90 day period.
+        j: User accounts will be monitored monthly and accounts will be disabled after 90 days of inactivity; this will be a manual review process every 30 days. 18F is in the process of automating this account management process through the use of implementing AWS OSQuery to trigger alerts when user accounts are inactive of a 90-day period.
     AC-2 (3):
       implementation_status: null
       narrative: |
@@ -24,7 +24,7 @@ satisfies:
       implementation_status: null
       narrative:
         b: |
-          18F monitors all privileged role assignments to their vpcs through the AWS IAM console , AWS CloudTrail audit logs and Cloud Watch alerts.  18F uses Cloud Checkr to provide centralized monitoring and alerting within its its VPC.
+          18F monitors all privileged role assignments to their vpcs through the AWS IAM console , AWS CloudTrail audit logs and Cloud Watch alerts.  18F uses Cloud Checkr to provide centralized monitoring and alerting within its VPC.
     AC-2 (12):
       implementation_status: null
       narrative:
@@ -59,7 +59,7 @@ satisfies:
     AC-17 (1):
       implementation_status: null
       narrative: |
-        Cloud Checkr provides a unified view of all infrastructure monitoring which captures all remote activites within 18F virtual infrastructure. The log files are organized by AWS Account ID, region, service name, date, and time. CloudTrail can be configured to aggregate log files from multiple regions into a single Amazon S3 bucket. From there, 18F Devops and SecOps teams view the logs files within Cloud Checkr to perform security analysis and detect user behavior patterns.
+        Cloud Checkr provides a unified view of all infrastructure monitoring which captures all remote activities within 18F virtual infrastructure. The log files are organized by AWS Account ID, region, service name, date, and time. CloudTrail can be configured to aggregate log files from multiple regions into a single Amazon S3 bucket. From there, 18F Devops and SecOps teams view the logs files within Cloud Checkr to perform security analysis and detect user behavior patterns.
     AU-2:
       implementation_status: null
       narrative:
