--- a/data/components/CloudFoundry/ELKStack/component.yaml
+++ b/data/components/CloudFoundry/ELKStack/component.yaml
@@ -10,13 +10,25 @@ satisfies:
       implementation_status: null
       narrative:
         g: |
-          The UAA API interface is used to monitor user accounts within the Cloud.Gov It list Cloud Foundry instance users. By default it returns information about each user account including GUID, name, permission groups, activity status, and metadata.
+          The UAA API interface is used to monitor privileged/non privileged user accounts within the Cloud.Gov It list Cloud Foundry instance users. By default it returns information about each user account including GUID, name, permission groups, activity status, and metadata.
           18F uses the ELK stack to provide a visual way to monitor all user and system accounts within Coud.Gov by interfacing with Cloud.Gov API calls to its internal system components (i.e. Loggregator, Cloud Controller, DEA, Warden, Metrics Collector)
     AC-2 (4):
       implementation_status: null
       narrative: |
         Cloud.Gov provides an audit trail through the bosh tasks command which shows all actions that an operator has taken with the platform. It also records an audit trail of all relevant API invocations of an app. The CLI command cf events returns this information.
         ELK ( Logstash, Elasticsearch, Kibana) a front end component for loggregator is used to automatically audit all actions within the Cloud.Gov platform. By binding an instance of the service to, Cloud.Gov applications logs will be drained to a Logstash syslog receiver and stored in Elasticsearch to perform realtime data analytics with Kibana as the interface for search and visualization.
+    AC-2 (7):
+      implementation_status: null
+      narrative:
+        b: |
+          18F monitors all privileged access API calls through the Cloud Foundry command line interface and BOSH command line interface within Cloud.Gov. These API calls are monitored through ELK.
+    AC-2 (12):
+      implementation_status: null
+      narrative:
+        a: |
+          Information system account activites are monitors via ELK
+        b: |
+          ELK reports atypical usage of information system accounts to designated 18F SecOps and Devops teams .
     AC-6 (9):
       implementation_status: null
       narrative: |
@@ -33,4 +45,4 @@ satisfies:
     AU-2 (3):
       implementation_status: null
       narrative: |
-        The Devops and Secops teams review all audtiable events on a real time basis using ELK monitoring and logging solution for the Cloud.Gov paltform. 
+        The Devops and Secops teams review all audtiable events on a real time basis using ELK monitoring and logging solution for the Cloud.Gov paltform.
