--- a/data/components/CloudFoundry/UAA/component.yaml
+++ b/data/components/CloudFoundry/UAA/component.yaml
@@ -21,13 +21,22 @@ satisfies:
     AC-2:
       implementation_status: null
       narrative:
+        j: |
+          # TODO
+          User accounts will be monitored monthly and accounts will be disabled after 90 days of inactivity; this will be a manual review process every 30 days, but the disablement will be automatic.
+          A manual review of all user accounts will be conducted on an annual basis
+
         k: |
           Cloud.Gov utilizes role based access controls (RBAC) for group membership within the platform and does not issue shared/group account credentials.
 
     AC-2 (1):
       implementation_status: null
       narrative: |
-        Cloud Foundry’s UAA implements a series of automations to ensure that system accounts follow specific password guidelines and have the intended roles.
+        Cloud.Gov uses the UAA CLI which is a semi-automated command line based account management system that enables operators to create, modify and deleted user accounts and roles within the platform. https://docs.cloudfoundry.org/adminguide/uaa-user-management.html
+    AC-2 (2):
+      implementation_status: null
+      narrative: |
+        Not Applicable. Cloud.Gov does not contain any guest/anonymous, group, or temporary user accounts. Devops only creates individual user accounts and grants role based access to users within Cloud.Gov. There are no guest/anonymous, group, or temporary user accounts in the 18F virtual environment.
     AC-2 (3):
       implementation_status: null
       narrative: |
@@ -36,11 +45,30 @@ satisfies:
     AC-2 (5):
       implementation_status: null
       narrative: |
-        Currently Cloud.Gov does not have an account lockout function (work in progress).
+        Account log out is set to 15 minutes of inactivity.
+    AC-2 (9):
+      implementation_status: null
+      narrative: |
+        NA - This control is not applicable. Group accounts are not allowed  within the 18F VPC and the Cloud.Gov platform
     AC-2 (10):
       implementation_status: null
       narrative: |
         This control is not applicable. Group accounts are not allowed  within the 18F VPC and the Cloud.Gov PaaS
+    AC-3:
+      implementation_status: null
+      narrative: |
+        18F follows best practices by implementing the majority of the following:
+          - Use RBAC model to restrict users’ access to only what is necessary to complete their tasks.
+          - Use a strong passphrase for both Cloud.gov user account and SSH keys.
+          - Configure UAA clients and users using a BOSH manifest. Limit and manage these clients and users as you would any other kind of privileged account.
+    AC-4:
+      implementation_status: null
+      narrative: |
+        The information system enforces approved authorizations for controlling the flow of information within the system and between interconnected systems based on the 18F Access Control Policy Section 3 -  Information Flow Enforcement which states:
+          - 18F enforces approved authorizations for controlling the flow of information within its information systems and between interconnected systems in accordance with applicable federal laws and 18F policies and procedures.
+          - 18F shall use flow control restrictions to include: keeping export controlled information from being transmitted in the clear to the Internet, blocking outside traffic that claims to be from within the organization and not passing any web requests to the Internet that are not from the internal web proxy.
+          - 18F shall use boundary protection devices (e.g., proxies, gateways, guards, encrypted tunnels, firewalls, and routers) that employ rule sets or establish configuration settings that restrict information system services, provide a packet-filtering capability based on header information, or message-filtering capability based on content (e.g., using key word searches or document characteristics.
+
     IA-2:
       implementation_status: null
       narrative: |
